@@ -5,6 +5,7 @@
 	* codegen.c (output_function_prototypes): use expected declaration
 	  for EXTFH modules to possibly catch modules using different interface
 	* parser.y, reserved.c: added RAISE statement as PENDING
+	* parser.y: work on pending USE ON exception-name
 
 2019-02-17  Simon Sobisch <simonsobisch@gnu.org>
 
